# justfinance

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.test  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/auth/: bruteforce.py  middleware.py  routes.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  logging.py  security.py
backend/app/middleware/: logging.py
backend/app/models/: __init__.py  base.py  category.py  merchant_mapping.py  statement.py  transaction.py
backend/app/routers/: analytics.py  categories.py  mappings.py  statements.py  transactions.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  category.py  mapping.py  statement.py  transaction.py
backend/app/services/: category_counts.py  export_csv.py  upload_pipeline.py
backend/app/services/analytics/: __init__.py  cache.py  dashboard.py  insights.py  mom.py  periods.py  queries.py  rate_limit.py  summary.py  trends.py
backend/app/services/categorizer/: __init__.py  batch.py  catalog.py  decision.py  mappings.py  normalize.py  own_accounts.py  prompts.py  types.py
backend/tests/: conftest.py  test_analytics.py  test_api_validation.py  test_auth.py  test_categories.py  test_categorizer_decision.py  test_categorizer_integration.py  test_categorizer_prompts.py  test_config.py  test_healthz.py  test_normalize.py  test_openrouter.py  test_own_accounts.py  test_pdf_parser.py  test_schema.py  test_transactions_categorize.py  test_transactions_export.py  test_upload_pipeline.py
backend/tests/fixtures/: README.md
(+76 files in other folders)
