[project]
name = "finance-tracker-backend"
version = "0.1.0"
description = "FastAPI backend for the personal finance tracker."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0.30",
  "asyncpg>=0.29",
  "pdfplumber>=0.11",
  "httpx>=0.27",
  "itsdangerous>=2.2",
  # bcrypt<4.1 dodges the passlib `__about__` AttributeError on newer bcrypt builds.
  "passlib[bcrypt]>=1.7",
  "bcrypt<4.1",
  "python-multipart>=0.0.9",
  "structlog>=24.1",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
